# choreonoid-deb

./: .gitignore  CMakeLists.txt  Doxyfile.in  INSTALL  cleanup-script.sh
debian/: changelog  choreonoid-dev.install  choreonoid-plugins-base.install  choreonoid-plugins-base.lintian-overrides  choreonoid.install  choreonoid.lintian-overrides  choreonoid.menu  choreonoid.symbols  choreonoid.symbols.i386  control  copyright  libcnoid1.lintian-overrides  libcnoid1.symbols  rules  source.lintian-overrides  watch
debian/patches/: 0001-Fix-compilation-failure-with-recent-Boost-version.patch  0002-Prevent-moc-qt-from-analyzing-Boost-headers.patch  0003-Fix-library-installation-directory.patch  0003-Fix-multiarchi-support.patch  0004-Install-choreonoid-program-when-build-type-is-RelWit.patch  0004-Remove-chorenoid-version-in-installation-directories.patch  0005-Install-pkg-config-file-in-lib-arch-directory.patch  0006-Port-to-Boost-Filesystem-v3.patch  0007-Fix-cast-from-pointer-to-udword-losing-precision.patch  0008-Fix-OpenSceneGraph-compilation-issues.patch  series
debian/tests/: build  control
extplugin/: CMakeLists.txt
extplugin/sample/GLGearsPlugin/: CMakeLists.txt
extplugin/sample/HelloWorldPlugin/: CMakeLists.txt
extplugin/sample/Sample1Plugin/: CMakeLists.txt
include/cnoid/: BodyMotionGenerationBar  ColdetLinkPair  ColdetModel  ColdetModelPair  CollisionData  CollisionPairInserter  ConnectionSet  DescriptionDialog  EigenYaml  FileUtil  Interpolator  LeggedBody  LineEdit  ModelNodeSet  OsgNormalVisualizer  OsgOutlineFx  OsgViewer  SceneBody  SceneBodyManager  SceneGL  SceneObject  ScenePieces  SceneWorld  SeqBase  SignalProxy  TimeSyncItemEngineManager  TriangleMeshShaper  Utf8  VrmlNodes  VrmlParser  VrmlToOsgConverter  VrmlWriter  World  YamlNodes  YamlReader  YamlWriter
misc/: CMakeLists.txt
misc/pkgconfig/: choreonoid.pc.in
misc/script/: install-requisites-ubuntu.sh  make_header_public.rb
proprietary/BalancerPlugin/: INSTALL  LICENSE
share/: CMakeLists.txt
share/projects/: GR001Sample.cnoid
src/: CMakeLists.txt
src/Base/: Action.cpp  Action.h  App.cpp  App.h  AppConfig.cpp  AppConfig.h  Archive.cpp  Archive.h  Base.qrc  Button.cpp  Button.h  ButtonGroup.cpp  ButtonGroup.h  CMakeLists.txt  ComboBox.h  ConnectionSet.cpp  ConnectionSet.h  DescriptionDialog.h  Dialog.cpp  Dialog.h  ExtensionManager.cpp  ExtensionManager.h  FileBar.h  FolderItem.cpp  FolderItem.h  GraphBar.cpp  GraphBar.h  GraphWidget.cpp  GraphWidget.h  InfoBar.h  Item.cpp  Item.h  ItemList.h  ItemManager.cpp  ItemManager.h  ItemManagerImpl.h  ItemPath.h  ItemPropertyView.cpp  ItemPropertyView.h  ItemSelectionModel.h  (+81 more)
src/Base/po/: ja.po  messages.pot
src/Body/: Body.cpp  Body.h  BodyCustomizerInterface.cpp  BodyCustomizerInterface.h  BodyLoader.cpp  BodyLoader.h  BodyMotion.cpp  BodyMotion.h  BodyMotionPoseProvider.cpp  BodyMotionPoseProvider.h  BodyMotionUtil.cpp  BodyMotionUtil.h  BodySymmetry.cpp  BodySymmetry.h  CMakeLists.txt  ColdetLinkPair.cpp  ColdetLinkPair.h  CompositeIK.cpp  CompositeIK.h  ConstraintForceSolver.cpp  ConstraintForceSolver.h  ConstraintForceSolver.penalty.cpp  ForwardDynamics.cpp  ForwardDynamics.h  ForwardDynamicsABM.cpp  ForwardDynamicsABM.h  ForwardDynamicsCBM.cpp  ForwardDynamicsCBM.h  InverseDynamics.cpp  InverseDynamics.h  InverseKinematics.h  Jacobian.cpp  Jacobian.h  JointPath.cpp  JointPath.h  LeggedBody.cpp  LeggedBody.h  Link.cpp  Link.h  LinkGroup.cpp  (+23 more)
src/BodyPlugin/: BodyBar.cpp  BodyBar.h  BodyItem.cpp  BodyItem.h  BodyLinkView.cpp  BodyLinkView.h  BodyMotionEngine.cpp  BodyMotionEngine.h  BodyMotionItem.cpp  BodyMotionItem.h  BodyPlugin.cpp  BodyPlugin.qrc  CMakeLists.txt  DynamicsSimulatorItem.cpp  DynamicsSimulatorItem.h  FilterDialogs.cpp  FilterDialogs.h  JointSliderView.cpp  JointSliderView.h  KinematicFaultChecker.cpp  KinematicFaultChecker.h  KinematicsBar.cpp  KinematicsBar.h  KinematicsSimulatorItem.cpp  KinematicsSimulatorItem.h  LinkSelectionView.cpp  LinkSelectionView.h  LinkTreeWidget.cpp  LinkTreeWidget.h  MultiAffine3SeqGraphView.cpp  MultiAffine3SeqGraphView.h  MultiValueSeqGraphView.cpp  MultiValueSeqGraphView.h  OsgCollision.cpp  OsgCollision.h  SceneBody.cpp  SceneBody.h  SceneBodyManager.cpp  SceneBodyManager.h  SceneWorld.cpp  (+10 more)
src/BodyPlugin/po/: ja.po
src/Choreonoid/: CMakeLists.txt  main.cpp
src/Collision/: CMakeLists.txt  ColdetModel.cpp  ColdetModel.h  ColdetModelPair.cpp  ColdetModelPair.h  ColdetModelSharedDataSet.h  CollisionData.h  CollisionPairInserter.cpp  CollisionPairInserter.h  DistFuncs.cpp  SSVTreeCollider.cpp  TriOverlap.cpp  exportdecl.h
src/Collision/Opcode/: OPC_TreeCollider.h  Opcode.h
src/Collision/Opcode/Ice/: IceFPU.h  IceMemoryMacros.h
src/GRobotPlugin/: CMakeLists.txt  GRobotBar.h  GRobotController.cpp  GRobotControllerItem.cpp  GRobotControllerItem.h  GRobotCustomizer.cpp  GRobotPlugin.cpp
src/GRobotPlugin/po/: ja.po
src/PoseSeqPlugin/: BodyMotionGenerationBar.cpp  BodyMotionGenerationBar.h  CMakeLists.txt  FcpFileLoader.cpp  FcpFileLoader.h  LipSyncTranslator.h  Pose.cpp  Pose.h  PoseFilters.cpp  PoseFilters.h  PoseRollView.cpp  PoseRollView.h  PoseSeq.cpp  PoseSeq.h  PoseSeqEngine.cpp  PoseSeqEngine.h  PoseSeqInterpolator.cpp  PoseSeqInterpolator.h  PoseSeqItem.cpp  PoseSeqItem.h  PoseSeqPlugin.cpp  PoseSeqView.cpp  PoseSeqView.h  PoseSeqViewBase.cpp  PoseSeqViewBase.h  PronunSymbol.cpp  PronunSymbol.h  exportdecl.h
src/PoseSeqPlugin/po/: ja.po
src/Util/: CMakeLists.txt  Config.h.in  EasyScanner.cpp  EasyScanner.h  EigenTypes.h  EigenUtil.cpp  EigenUtil.h  EigenYaml.h  FileUtil.cpp  FileUtil.h  GaussianFilter.h  ImageConverter.cpp  ImageConverter.h  Interpolator.cpp  Interpolator.h  MultiAffine3Seq.cpp  MultiAffine3Seq.h  MultiSeq.h  MultiValueSeq.cpp  MultiValueSeq.h  NullOut.cpp  NullOut.h  PlainSeqFormatLoader.cpp  PlainSeqFormatLoader.h  RangeLimiter.h  Referenced.h  Seq.h  SeqBase.cpp  SeqBase.h  Sleep.h  TimeMeasure.h  TriangleMeshShaper.cpp  TriangleMeshShaper.h  Triangulator.cpp  Triangulator.h  Utf8.cpp  Utf8.h  Vector3Seq.cpp  Vector3Seq.h  VrmlNodes.cpp  (+13 more)
(+7 files in other folders)
